# Todo-Full-Stack-Web-App

./: .gitignore  BACKEND_IMPLEMENTATION_SUMMARY.md  HOW_TO_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PHASE3_VERIFICATION.md  QWEN.md  README.md  UI_UX_TESTING_GUIDELINES.md  build-test.js  chatkit_docs.md  create_migration.py  openai_agents_google_models_docs.md  test-build-detailed.js  test-build.js  validate_backend.py  validate_phase3.py
backend/: .env.example  (+5 more)
todo-backend/: .env.example  .gitignore  API_DOCUMENTATION.md  DEPLOYMENT.md  Dockerfile  FRONTEND_INTEGRATION.md  HOW_TO_DEPLOY_ON_HUGGING_FACE.md  MONITORING.md  README.md  alembic.ini  app.py  debug_import.py  debug_imports.py  debug_main.py  debug_server.py  deploy.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  routes_test.py  run_tests.py  simple_test.py  space.yml  start_server.py  test_api.py  test_bulk_delete.py  test_connection.py  test_routes.py  test_toggle.py  validate_app.py
todo-backend/alembic/: env.py
todo-backend/alembic/versions/: 2d39029cac08_add_priority_column_to_todoitem_table.py  4f637488a4e0_update_priority_column_to_store_string_.py  6fbc838b3c2c_update_priority_column_to_use_string_.py  9be5b1150112_ensure_priority_column_has_proper_.py
todo-backend/how-to/: how-to-deploy-todo-backend.md  how-to-use-todo-api.md
todo-backend/src/: api_client.py  exception_handlers.py  logging_config.py  monitoring.py
todo-backend/src/api/: health_router.py  todo_router.py
todo-backend/tests/: additional_tests.py  performance_test.py  test_bulk_delete_fix.py  test_todo_api.py
(+308 files in other folders)
