[project]
name = "todo-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.2",
    "black==24.8.0",
    "fastapi==0.115.0",
    "flake8==7.1.1",
    "httpx==0.27.2",
    "mypy==1.11.2",
    "psycopg2-binary==2.9.9",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "pytest==8.3.3",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "python-multipart==0.0.20",
    "sqlmodel==0.0.22",
    "uvicorn==0.32.0",
]
